# forpc

./: .gitignore  README.md  README_ZH.md  README_zh.md
.github/workflows/: go.yml  interop.yml  napi.yml  rust.yml
docs/: CAPNPROTO_TIME_TRAVEL.md  GAP_ANALYSIS.md  HTTP2_HTTP3_RESEARCH.md  NNG_RESEARCH_CN.md  PIPELINING_LITE.md  TECHNICAL_SPECIFICATION_CN.md
go/: go.mod  go.sum
go/examples/interop_echo_client/: main.go
go/examples/interop_echo_server/: main.go
go/examples/interop_raw_echo_client/: main.go
go/examples/interop_raw_echo_server/: main.go
go/examples/msgpack_echo_client/: main.go
go/examples/msgpack_echo_server/: main.go
go/forpc/: error.go  generic.go  interop_packet_rust_test.go  interop_rust_test.go  listener.go  peer.go  peer_test.go  protocol.go  status.go  stream.go
go/forpc/pb/: forpc.pb.go  forpc_test.pb.go
go/minirpc/: error.go  generic.go  interop_packet_rust_test.go  interop_rust_test.go  listener.go  peer.go  peer_test.go  protocol.go  status.go  stream.go
go/transport/: transport.go
go/transport/mangos/: mangos.go
node/: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  README_zh.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
node/.github/workflows/: CI.yml
node/__test__/: index.spec.ts  protocol.spec.ts  rpc.spec.ts
node/scripts/: interop_echo_client.js  interop_echo_server.js  interop_raw_echo_client.js  interop_raw_echo_server.js  msgpack_echo_client.js  msgpack_echo_server.js
node/src/: lib.rs  peer.ts  protocol.ts  server.ts
node/transport/: index.d.ts  index.js
proto/: forpc.proto  forpc_test.proto
rust/: Cargo.toml  build.rs
rust/examples/: http_proxy_client.rs  http_proxy_server.rs  interop_echo_client.rs  interop_echo_server.rs  interop_packet_echo_server.rs  interop_raw_echo_client.rs  interop_raw_echo_server.rs  msgpack_echo_client.rs  msgpack_echo_server.rs  nng_proxy_client.rs  nng_proxy_server.rs  nng_socks5_client.rs  nng_tunnel_server.rs  upstream_echo_server.rs
rust/examples/http_proxy/: common.rs
rust/src/: lib.rs  pb.rs
rust/src/rpc/: error.rs  listener.rs  mod.rs  peer.rs  protocol.rs  status.rs  stream.rs
rust/src/transport/: mod.rs  nng.rs
scripts/: interop_matrix.sh
