
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "mini_rpc"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
bytes = "1"
mini-rpc = { path = "../rust" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
