
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "forpc-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
bytes = "1"
# Disable default features to avoid pulling in rt-multi-thread from anng's tokio feature
# napi's tokio_rt already provides the runtime
anng = { git = "https://github.com/bytemain/nng-rs.git", branch = "main", default-features = false, features = ["vendored"] }
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
