[package]
name = "mini-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anng = { git = "https://github.com/bytemain/nng-rs.git", branch = "main" }
tokio = { version = "1.49.0", features = ["full"] }
fory = "0.14"
fory-core = "0.14.1"
async-trait = "0.1.89"
bytes = "1.11.0"
axum = "0.7.9"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
uuid = { version = "1.12.1", features = ["v4"] }
lexopt = "0.3.1"
